--- a/css/style.css
+++ b/css/style.css
@@ -1230,12 +1230,12 @@
 /* Banner */
 
 	#banner {
-		background-attachment: scroll,						fixed;
+        background-attachment: scroll, fixed;
 		background-color: #494d53;
-		background-image: url("images/overlay.png"), url("../images/banner6.jpg");
-		background-position: top left,					center center;
-		background-repeat: repeat,						no-repeat;
-		background-size: auto,						cover;
+		background-image: url("images/overlay.png"), url("../images/banner.jpg");
+		background-position: top left, center center;
+		background-repeat: repeat,	no-repeat;
+		background-size: auto,	cover;
 		color: #d1d2d4;
 		padding: 16em 0;
 		position: relative;
