--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3569,7 +3569,7 @@
 		transition-delay: 0.25s;
 		cursor: default;
 		position: relative;
-		height: 40rem; /* original setting - 32rem */
+		height: 80vh; /* original setting - 32rem */
 		box-shadow: 0 2rem 4rem 0.25rem rgba(46, 43, 55, 0.575);
 	}
 
@@ -3656,7 +3656,8 @@
 			-webkit-flex-direction: column;
 			-ms-flex-direction: column;
 			flex-direction: column;
-			height: auto;
+			max-height: 70vh;
+            height: auto;
 			margin: 0 0 5rem 0;
 			box-shadow: 0 0.25rem 1.5rem 0.25rem rgba(46, 43, 55, 0.5);
 		}
