--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -468,6 +468,7 @@
 	@media screen and (max-width: 736px) {
 
 		html {
+            font-family: Calibri, Arial, Helvetica, sans-serif;
 			font-size: 12pt;
 		}
 
@@ -530,6 +531,7 @@
 	@media screen and (max-width: 360px) {
 
 		html {
+            font-family: Calibri, Arial, Helvetica, sans-serif;
 			font-size: 11pt;
 		}
 
